0025770: Possible "invalid memory access"

Memory problems fixed.